# llm-stock-trader-trainer

./: .gitignore  Makefile  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yaml
backend/: .env.example  .gitignore  Dockerfile  Makefile  README.md  nixpacks.toml  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: __init__.py  data.py  news.py  playback.py  stock_search.py  trading.py
backend/app/database/: __init__.py  connection.py  models.py
backend/app/helpers/: stock_database.py
backend/app/helpers/newsapi/: __init__.py  models.py  stock_name_fetcher.py  utils.py
backend/app/helpers/yfinance/: utils.py
backend/app/models/: __init__.py  playback.py  trading.py
backend/app/services/: __init__.py  indicator_service.py  news_service.py  playback_service.py  trading_service.py
backend/app/utils/: __init__.py  stock_fetcher.py
backend/scripts/: build_complete_stock_database.py  reset_news_database.py
backend/scripts/data/: taiwan_stocks.json
backend/tests/: debug_tavily_taiwan.py  test_tavily_integration.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: StockSearch.tsx
frontend/src/components/Chart/: CandlestickChart.tsx
frontend/src/components/Chart/charts/: SimpleTradingViewChart.tsx  TaiwanFuturesChart.tsx
frontend/src/components/News/: NewsModal.tsx
frontend/src/components/Player/: PlaybackControls.tsx
frontend/src/components/Trading/: PerformanceAnalysis.css  PerformanceAnalysis.tsx  TradeJournal.css  TradeJournal.tsx  TradingPanel.css  TradingPanel.tsx
frontend/src/pages/: TradingSimulator.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
